samples/_failures_safe/1761481982_0a50d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bab9229a.c: In function ‘main’:
./samples/SAFE/__tmp_bab9229a.c:153:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  153 |     int token
      |     ^~~
./samples/SAFE/__tmp_bab9229a.c:153:5: error: expected declaration or statement at end of input
